examples/test/testpolicy14078.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14078
  namespace: namespace358
spec:
  podSelector:
    matchLabels:
      key24: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value31
          key34: value48
          key43: value21
      podSelector:
        matchLabels:
          key45: value23
          key19: value20
